# mandelbrot

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt
app/: CMakeLists.txt  test_cexpr_basic_string.cpp  test_mandelbrot.cpp
include/ra/: cexpr_basic_string.hpp  mandelbrot.hpp
